--- a/admin.html
+++ b/admin.html
@@ -6,56 +6,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
-      margin: 0;
-      font-family: 'Roboto Slab', Helvetica, Arial, sans-serif;
-      background-color: #f4f4f4;
       display: flex;
       height: 100vh;
       flex-direction: column;
-    }
-
-    nav {
-      background-color: rgb(9, 58, 29);
-      padding: 15px;
-      display: flex;
-      align-items: center;
-    }
-
-    .nav-left, .nav-center, .nav-right {
-      display: flex;
-      align-items: center;
-    }
-
-    .nav-left {
-      flex: 1;
-    }
-
-    .nav-center {
-      flex: 1;
-      justify-content: center;
-    }
-
-    .nav-right {
-      flex: 1;
-      justify-content: flex-end;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-size: 20px;
-      margin: 0 10px;
-    }
-
-    nav a:hover {
-      color: #ccc;
-    }
-
-    .nav-center img {
-      height: 40px;
     }
 
     .admin-container {
@@ -104,12 +61,6 @@
     }
   </style>
 
-  <script>
-    function toggleSection(selector) {
-      const element = document.querySelector(selector);
-      element.style.display = element.style.display === "block" ? "none" : "block";
-    }
-  </script>
 </head>
 <body>
   
@@ -169,3 +120,10 @@
   </div>
 </body>
 </html>
+
+<script>
+  function toggleSection(selector) {
+    const element = document.querySelector(selector);
+    element.style.display = element.style.display === "block" ? "none" : "block";
+  }
+</script>
