--- a/login page.html
+++ b/login page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merged Boxes</title>
+    <title>Login</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
         
@@ -12,9 +12,6 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f4f4f4;
-            margin: 0;
-            font-family: 'Roboto Slab', Helvetica, Arial, sans-serif;
         }
         .container {
             position: relative;
